--- a/src/app/students/approvedleave/approvedleave.component.html
+++ b/src/app/students/approvedleave/approvedleave.component.html
@@ -34,9 +34,8 @@
                                                 <td>hello my name is devesh sheth</td>
                                                 <td><span class="approve">Approved</span></td>
                                                 <td>
-                                                    <a href=""> <i class="fas fa-edit"
-                                                            style="color: lightseagreen;"></i> </a> | <a href=""> <i
-                                                            class="fas fa-trash-alt" style="color: red;"></i> </a>
+                                                    <i class="fas fa-check"
+                                                            style="color: green"></i>  
                                                 </td>
                                             </tr>
 
@@ -47,9 +46,8 @@
                                                 <td>hello my name is devesh sheth</td>
                                                 <td><span class="approve">Approved</span></td>
                                                 <td>
-                                                    <a href=""> <i class="fas fa-edit"
-                                                            style="color: lightseagreen;"></i> </a> | <a href=""> <i
-                                                            class="fas fa-trash-alt" style="color: red;"></i> </a>
+                                                    <i class="fas fa-check"
+                                                            style="color: green"></i>
                                                 </td>
                                             </tr>
 
@@ -60,9 +58,8 @@
                                                 <td>hello my name is devesh sheth</td>
                                                 <td><span class="approve">Approved</span></td>
                                                 <td>
-                                                    <a href=""> <i class="fas fa-edit"
-                                                            style="color: lightseagreen;"></i> </a> | <a href=""> <i
-                                                            class="fas fa-trash-alt" style="color: red;"></i> </a>
+                                                   <i class="fas fa-check"
+                                                            style="color: green"></i>
                                                 </td>
                                             </tr>
 
@@ -73,9 +70,8 @@
                                                 <td>hello my name is devesh sheth</td>
                                                 <td><span class="approve">Approved</span></td>
                                                 <td>
-                                                    <a href=""> <i class="fas fa-edit"
-                                                            style="color: lightseagreen;"></i> </a> | <a href=""> <i
-                                                            class="fas fa-trash-alt" style="color: red;"></i> </a>
+                                                   <i class="fas fa-check"
+                                                            style="color: green"></i>
                                                 </td>
                                             </tr>
 
