--- a/src/app/students/dashboard/dashboard.component.html
+++ b/src/app/students/dashboard/dashboard.component.html
@@ -53,7 +53,7 @@
 
 
                 <div class="row">
-                    <div class="col-12 col-md-6 col-lg-4 col-xl-8">
+                    <div class="col-12 col-md-6 col-lg-4 col-xl-12">
                         <div class="card">
                             <div class="card-header">
                                 <h4 class="card-title d-inline-block">Pending Leave</h4> <a routerLink="../pendingleave"
@@ -143,93 +143,103 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-6 col-lg-4 col-xl-4">
-                        <div class="card member-panel">
-                            <div class="card-header bg-white">
-                                <h4 class="card-title mb-0">Approved Leave</h4>
+                    
+                </div>
+
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4 col-xl-12">
+                        <div class="card">
+                            <div class="card-header">
+                                <h4 class="card-title d-inline-block">Approved Leave</h4> <a routerLink="../pendingleave"
+                                    class="btn btn-primary float-right">View all</a>
                             </div>
-                            <div class="card-body">
-                                <ul class="contact-list">
-                                  
-                                    <li>
-                                        <div class="contact-cont">
-                                            <div class="float-left user-img m-r-10">
-                                                <a href="profile.html" title="John Doe"><i class="far fa-calendar-check"
-                                                        style="font-size: 30px;color: rgb(195, 192, 192);"></i><span
-                                                        class="status online"></span></a>
-                                            </div>
-                                            <div class="contact-info">
-                                                <span class="contact-name text-ellipsis">Leave Type</span>
-                                                <span class="contact-date">12-Dec-2022 - 12-Dec-2022</span><br>
-                                                <span class="contact-date">Leave Reason</span>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="contact-cont">
-                                            <div class="float-left user-img m-r-10">
-                                                <a href="profile.html" title="John Doe"><i class="far fa-calendar-check"
-                                                        style="font-size: 30px;color: rgb(195, 192, 192);"></i><span
-                                                        class="status online"></span></a>
-                                            </div>
-                                            <div class="contact-info">
-                                                <span class="contact-name text-ellipsis">Leave Type</span>
-                                                <span class="contact-date">12-Dec-2022 - 12-Dec-2022</span><br>
-                                                <span class="contact-date">Leave Reason</span>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="contact-cont">
-                                            <div class="float-left user-img m-r-10">
-                                                <a href="profile.html" title="John Doe"><i class="far fa-calendar-check"
-                                                        style="font-size: 30px;color: rgb(195, 192, 192);"></i><span
-                                                        class="status online"></span></a>
-                                            </div>
-                                            <div class="contact-info">
-                                                <span class="contact-name text-ellipsis">Leave Type</span>
-                                                <span class="contact-date">12-Dec-2022 - 12-Dec-2022</span><br>
-                                                <span class="contact-date">Leave Reason</span>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="contact-cont">
-                                            <div class="float-left user-img m-r-10">
-                                                <a href="profile.html" title="John Doe"><i class="far fa-calendar-check"
-                                                        style="font-size: 30px;color: rgb(195, 192, 192);"></i><span
-                                                        class="status online"></span></a>
-                                            </div>
-                                            <div class="contact-info">
-                                                <span class="contact-name text-ellipsis">Leave Type</span>
-                                                <span class="contact-date">12-Dec-2022 - 12-Dec-2022</span><br>
-                                                <span class="contact-date">Leave Reason</span>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="contact-cont">
-                                            <div class="float-left user-img m-r-10">
-                                                <a href="profile.html" title="John Doe"><i class="far fa-calendar-check"
-                                                        style="font-size: 30px;color: rgb(195, 192, 192);"></i><span
-                                                        class="status online"></span></a>
-                                            </div>
-                                            <div class="contact-info">
-                                                <span class="contact-name text-ellipsis">Leave Type</span>
-                                                <span class="contact-date">12-Dec-2022 - 12-Dec-2022</span><br>
-                                                <span class="contact-date">Leave Reason</span>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    
-                                </ul>
-                            </div>
-                            <div class="card-footer text-center bg-white">
-                                <a routerLink="../stuapprovedleave" class="text-muted">View all Leaves</a>
+                            <div class="card-body p-0">
+                                <div class="table-responsive">
+                                    <table datatable [dtOptions]="dtOptions" class="row-border hover">
+                                        <thead>
+                                            <tr>
+                                                <th>Leave Type</th>
+                                                <th>Leave Start</th>
+                                                <th>Leave End</th>
+                                                <th>Reason</th>
+                                                <th>Status</th>
+                                                <th>Action</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>asd</td>
+                                                <td>12-Dec-2022</td>
+                                                <td>12-Dec-2022</td>
+
+                                                <td>hello my name is devesh sheth</td>
+                                                <td><span class="approve">Approved</span></td>
+                                                <td>
+                                                   <i class="fas fa-check"
+                                                            style="color: green"></i>
+                                                </td>
+                                            </tr>
+
+                                            <tr>
+                                                <td>asd</td>
+                                                <td>12-Dec-2022</td>
+                                                <td>12-Dec-2022</td>
+
+                                                <td>hello my name is devesh sheth</td>
+                                                <td><span class="approve">Approved</span></td>
+                                                <td>
+                                                   <i class="fas fa-check"
+                                                            style="color: green"></i>
+                                                </td>
+                                            </tr>
+
+                                            <tr>
+                                                <td>asd</td>
+                                                <td>12-Dec-2022</td>
+                                                <td>12-Dec-2022</td>
+
+                                                <td>hello my name is devesh sheth</td>
+                                                <td><span class="approve">Approved</span></td>
+                                                <td>
+                                                   <i class="fas fa-check"
+                                                            style="color: green"></i>
+                                                </td>
+                                            </tr>
+
+                                            <tr>
+                                                <td>asd</td>
+                                                <td>12-Dec-2022</td>
+                                                <td>12-Dec-2022</td>
+
+                                                <td>hello my name is devesh sheth</td>
+                                                <td><span class="approve">Approved</span></td>
+                                                <td>
+                                                   <i class="fas fa-check"
+                                                            style="color: green"></i>
+                                                </td>
+                                            </tr>
+
+                                            <tr>
+                                                <td>asd</td>
+                                                <td>12-Dec-2022</td>
+                                                <td>12-Dec-2022</td>
+
+                                                <td>hello my name is devesh sheth</td>
+                                                <td><span class="approve">Approved</span></td>
+                                                <td>
+                                                   <i class="fas fa-check"
+                                                            style="color: green"></i>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    
                 </div>
+
             </div>
 
 
